tests/fail_invariant_contravariant.stderr
error[E0308]: mismatched types
 --> $DIR/fail_invariant_contravariant.rs:7:9
  |
7 |         Invariant::<Lifetime<'a>>::default(),
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
  |
  = note: expected struct `type_variance::Invariant<common::Lifetime<'static>>`
             found struct `type_variance::Invariant<common::Lifetime<'a>>`
note: the lifetime `'a` as defined on the function body at 5:33...
 --> $DIR/fail_invariant_contravariant.rs:5:33
  |
5 | fn invariant_fail_contravariant<'a>() {
  |                                 ^^
  = note: ...does not necessarily outlive the static lifetime
